--- a/global.css
+++ b/global.css
@@ -26,3 +26,17 @@ body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: subtle shadow for effect */
   border-radius: 8px; /* Optional: rounded corners */
 }
+
+#map svg {
+  position: absolute ;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 1;
+}
+
+svg circle {
+    opacity: 0.6;
+    stroke: white;
+    pointer-events: auto
+}
